fix: 修正nginx配置等
修正一些eslintrc配置

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,7 @@
 # 添加后端负载均衡地址
 # 实际项目换成对应后端的域名或ip
 upstream backend {  
-  server 10.182.94.95 weight=1;  
+  server your.backend.ip.or.domain weight=1;  
 }
 
 server {
@@ -9,6 +9,13 @@ server {
   error_log /export/servers/nginx/logs/error.log;
 	listen 80 default_server;
   server_name _;
+
+  gzip                            on;
+  gzip_min_length                 100;
+  gzip_buffers                    4 16k;
+  gzip_http_version               1.1;
+  gzip_comp_level                 9;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
   location / {
     try_files $uri $uri/ /index.html;  
