--- a/package.json
+++ b/package.json
@@ -36,8 +36,8 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
+    "eslint": "^5.3.0",
+    "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
     "eslint-config-react": "^1.1.7",
     "eslint-import-resolver-webpack": "^0.10.0",
@@ -72,6 +72,7 @@
     "antd": "^3.7.0",
     "axios": "^0.18.0",
     "babel-register": "^6.26.0",
+    "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "chromedriver": "^2.40.0",
     "classnames": "^2.2.6",
@@ -82,7 +83,7 @@
     "enzyme-adapter-react-16": "^1.1.1",
     "es6-promise": "^4.2.4",
     "fetch-mock": "^6.4.4",
-    "fxios": "^0.3.0",
+    "fxios": "^0.5.1",
     "history": "^4.7.2",
     "isomorphic-fetch": "^2.2.1",
     "jsdom": "^11.11.0",
