fix: 修正babel选项，添加缺失npm包

--- a/.babelrc
+++ b/.babelrc
@@ -6,9 +6,9 @@
       {
         "libraryName": "antd",
         "style": true,
-      },
-      "transform-runtime"
+      }
     ],
+    "transform-runtime",
     "transform-decorators-legacy"
   ]
 }
