--- a/package.json
+++ b/package.json
@@ -70,7 +70,7 @@
   },
   "dependencies": {
     "animate.css": "^3.7.0",
-    "ant-design-pro": "^2.0.0-beta.2",
+    "ant-design-pro": "^1.4.4",
     "antd": "^3.7.0",
     "axios": "^0.18.0",
     "babel-register": "^6.26.0",
