--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "lodash-es": "^4.17.10",
     "mobx": "^4.3.1",
     "mobx-react": "^5.2.2",
+    "mobx-react-devtools": "^6.0.2",
     "mobx-react-router": "^4.0.4",
     "moment": "^2.22.2",
     "moxios": "^0.4.0",
