--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "mobx-react": "^5.2.2",
     "mobx-react-devtools": "^6.0.2",
     "mobx-react-router": "^4.0.4",
+    "mobx-utils": "^5.0.1",
     "moment": "^2.22.2",
     "moxios": "^0.4.0",
     "nightwatch": "^0.9.21",
