--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.9.1",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
