--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "autoprefixer": "^8.6.2",
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
@@ -37,18 +37,18 @@
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
-    "eslint": "^5.3.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
+    "eslint": "^5.4.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.0.1",
     "eslint-config-react": "^1.1.7",
-    "eslint-import-resolver-webpack": "^0.10.0",
-    "eslint-loader": "^2.0.0",
-    "eslint-plugin-flowtype": "^2.49.3",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jest": "^21.17.0",
-    "eslint-plugin-jsx-a11y": "^6.1.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
+    "eslint-loader": "^2.1.0",
+    "eslint-plugin-flowtype": "^2.50.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jest": "^21.22.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.9.1",
+    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
@@ -105,6 +105,7 @@
     "moxios": "^0.4.0",
     "nightwatch": "^0.9.21",
     "nightwatch-helpers": "^1.2.0",
+    "nprogress": "^0.2.0",
     "opn": "^5.3.0",
     "path-to-regexp": "^2.2.1",
     "pluralize": "^7.0.0",
