--- a/package.json
+++ b/package.json
@@ -124,6 +124,9 @@
     "webpack-dev-server": "^3.1.4",
     "whatwg-fetch": "^2.0.4"
   },
+  "engines": {
+    "node": ">=9.8.0"
+  },
   "jest": {
     "collectCoverageFrom": [
       "app/component/**/*.{js,jsx,mjs}",
