--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -15,7 +15,7 @@ server {
   gzip_buffers                    4 16k;
   gzip_http_version               1.1;
   gzip_comp_level                 9;
-  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+  gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript application/font-woff;
 
   location / {
     try_files $uri $uri/ /index.html;  
