--- a/package.json
+++ b/package.json
@@ -21,17 +21,25 @@
     "url": "https://github.com/superwf/react-mobx-scaffold.git"
   },
   "devDependencies": {
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-export-default-from": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-syntax-jsx": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-stage-0": "^7.0.0",
+    "@babel/runtime": "^7.0.0",
     "autoprefixer": "^8.6.2",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.4",
+    "babel-7-jest": "^21.3.3",
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^9.0.0",
+    "babel-loader": "^8.0.0",
     "babel-plugin-import": "^1.8.0",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
     "browserslist": "^4.0.1",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.5.1",
@@ -71,11 +79,11 @@
     "webpack-cli": "^3.0.4"
   },
   "dependencies": {
+    "@babel/register": "^7.0.0",
     "animate.css": "^3.7.0",
     "ant-design-pro": "^1.4.4",
     "antd": "^3.7.0",
     "axios": "^0.18.0",
-    "babel-register": "^6.26.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "chromedriver": "^2.40.0",
@@ -127,6 +135,9 @@
   "engines": {
     "node": ">=9.8.0"
   },
+  "resolutions": {
+    "babel-core": "7.0.0-bridge.0"
+  },
   "jest": {
     "collectCoverageFrom": [
       "app/component/**/*.{js,jsx,mjs}",
@@ -146,7 +157,7 @@
     "testEnvironment": "enzyme",
     "testURL": "http://localhost",
     "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-7-jest",
       "^.+\\.(css|less)$": "<rootDir>/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/jest/fileTransform.js"
     },
