--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "production": "npm run build:production",
     "e2e": "npx babel-node e2e/runner.js",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage && node jest/openCoverage.js"
   },
   "author": "superwf@gmail.com",
   "license": "ISC",
@@ -82,7 +82,6 @@
     "animate.css": "^3.7.0",
     "ant-design-pro": "^2.0.0",
     "antd": "^3.9.3",
-    "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "chalk": "^2.4.1",
     "chromedriver": "^2.40.0",
@@ -101,6 +100,7 @@
     "jsdom": "^11.11.0",
     "less": "^3.0.4",
     "load-polyfill": "^0.2.1",
+    "localforage": "^1.7.2",
     "localstorage-polyfill": "^1.0.1",
     "lodash": "^4.17.10",
     "lodash-es": "^4.17.10",
@@ -137,47 +137,5 @@
   },
   "engines": {
     "node": ">=9.8.0"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "app/component/**/*.{js,jsx,mjs}",
-      "app/page/**/*.{js,jsx,mjs}",
-      "app/store/**/*.{js,jsx,mjs}",
-      "app/storeProp/**/*.{js,jsx,mjs}",
-      "app/mixin/**/*.{js,jsx,mjs}",
-      "app/tool/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/jest/setup.js"
-    ],
-    "testMatch": [
-      "<rootDir>/__test__/**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "setupTestFrameworkScriptFile": "<rootDir>/jest/afterSetup.js",
-    "watchPlugins": [],
-    "testEnvironment": "enzyme",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/node_modules/babel-7-jest",
-      "^.+\\.(css|less)$": "<rootDir>/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json)$)": "<rootDir>/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "<rootDir>/node_modules/(?!lodash-es/).+(js|jsx|mjs)$"
-    ],
-    "moduleNameMapper": {
-      "^component/(.+)$": "<rootDir>/app/component/$1",
-      "^tool/(.+)$": "<rootDir>/app/tool/$1",
-      "^store/(.+)$": "<rootDir>/app/store/$1",
-      "^storeProp/(.+)$": "<rootDir>/app/storeProp/$1",
-      "^app/(.+)$": "<rootDir>/app/$1",
-      "history/createBrowserHistory": "<rootDir>/node_modules/history/createMemoryHistory"
-    },
-    "moduleFileExtensions": [
-      "js",
-      "json",
-      "jsx",
-      "node"
-    ]
   }
 }
