--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-jsx-a11y": "^6.1.1",
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.3.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.1.0",
