--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "postcss-syntax": "^0.28.0",
+    "pre-commit": "^1.2.2",
     "prettier": "^1.13.5",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
@@ -138,5 +139,8 @@
   },
   "engines": {
     "node": ">=9.8.0"
-  }
+  },
+  "pre-commit": [
+    "test"
+  ]
 }
