--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "babel-loader": "^8.0.0",
     "babel-plugin-import": "^1.8.0",
     "browserslist": "^4.0.1",
+    "commitizen": "^3.0.2",
     "compression-webpack-plugin": "^1.1.11",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.6",
     "css-loader": "^0.28.11",
+    "cz-conventional-changelog": "^2.1.0",
     "eslint": "^5.4.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.0.1",
