--- a/package.json
+++ b/package.json
@@ -71,7 +71,6 @@
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "postcss-loader": "^2.1.5",
     "postcss-syntax": "^0.28.0",
-    "pre-commit": "^1.2.2",
     "prettier": "^1.13.5",
     "rimraf": "^2.6.2",
     "style-loader": "^0.21.0",
@@ -79,7 +78,8 @@
     "stylelint-config-property-sort-order-smacss": "^4.0.0",
     "stylelint-config-recommended": "^2.1.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
-    "webpack-cli": "^3.0.4"
+    "webpack-cli": "^3.0.4",
+    "yorkie": "^2.0.0"
   },
   "dependencies": {
     "@babel/register": "^7.0.0",
@@ -142,7 +142,8 @@
   "engines": {
     "node": ">=9.8.0"
   },
-  "pre-commit": [
-    "test"
-  ]
+  "gitHooks": {
+    "commit-msg": "node ./git/verify-commit-message.js",
+    "pre-commit": "yarn test"
+  }
 }
