feat(serviceworker): add serviceworker support

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,12 @@ upstream backend {
 }
 
 server {
+  # listen 443 ssl;
+  # ssl_certificate     /etc/nginx/ssl/server-cert.pem;
+  # ssl_certificate_key /etc/nginx/ssl/server-key.pem;
+  # ssl_protocols       TLSv1 TLSv1.1 TLSv1.2;
+  # ssl_ciphers         HIGH:!aNULL:!MD5;
+
   root /export/App;
   error_log /export/servers/nginx/logs/error.log;
 	listen 80 default_server;
