--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "stylelint": "^9.2.1",
     "stylelint-config-property-sort-order-smacss": "^4.0.0",
     "stylelint-config-recommended": "^2.1.0",
+    "sw-precache-webpack-plugin": "^0.11.5",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-cli": "^3.0.4",
     "yorkie": "^2.0.0"
