--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -26,7 +26,9 @@ server {
   location / {
     try_files $uri $uri/ /index.html;  
   }
+
   location ~ /api(?<section>.+)$ {
+    proxy_http_version 1.1;
     proxy_set_header   X-Real-IP        $remote_addr;
     proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
     proxy_set_header Host $host;
