--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "eslint-plugin-react-native": "^3.3.0",
     "express": "^4.16.3",
     "html-webpack-plugin": "^3.2.0",
+    "import-js": "^3.2.0",
     "jest": "^23.1.0",
     "jest-environment-enzyme": "^6.0.0",
     "jsinspect": "^0.12.7",
