--- a/.projections.json
+++ b/.projections.json
@@ -4,6 +4,7 @@
   "src/store/*.js": { "type": "store" },
   "src/storeProp/*.js": { "type": "storeProp" },
   "src/mixin/*": { "type": "mixin" },
+  "src/locale/*": { "type": "locale" },
   "src/style/*.less": { "type": "style" },
   "src/tool/*.js": { "type": "tool" },
   "__test__/*": { "type": "test" },
