--- a/.projections.json
+++ b/.projections.json
@@ -1,10 +1,10 @@
 {
   "src/component/*": { "type": "component" },
-  "src/page/*": { "type": "page" },
+  "src/page/*.{js,jsx}": { "type": "page" },
   "src/store/*.js": { "type": "store" },
   "src/storeProp/*.js": { "type": "storeProp" },
-  "src/mixin/*": { "type": "mixin" },
-  "src/locale/*": { "type": "locale" },
+  "src/mixin/*.js": { "type": "mixin" },
+  "src/locale/*.js": { "type": "locale" },
   "src/style/*.less": { "type": "style" },
   "src/tool/*.js": { "type": "tool" },
   "__test__/*": { "type": "test" },
