--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:test": "cross-env NODE_ENV=production LOGIN_HOST=test npx webpack --progress --hide-modules --mode=production",
     "build:production": "cross-env NODE_ENV=production npx webpack --progress --hide-modules --mode=production",
     "production": "npm run build:production",
-    "e2e": "npx babel-node e2e/runner.js",
+    "e2e": "jest -c jest.config.puppeteer.js",
+    "e2e:debug": "DEBUG=true jest -c jest.config.puppeteer.js",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 10",
     "zip": "cd dist && zip -r dist ./* && cd -",
     "test": "jest",
@@ -74,20 +75,20 @@
     "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-react-native": "^3.3.0",
     "express": "^4.16.3",
+    "faker": "^4.1.0",
     "fetch-mock": "^6.4.4",
     "html-webpack-plugin": "^3.2.0",
     "import-js": "^3.2.0",
     "jest": "^23.6.0",
     "jest-environment-enzyme": "^7.0.0",
     "jest-enzyme": "^7.0.0",
+    "jest-puppeteer": "^3.4.0",
     "jsdom": "^12.2.0",
     "jsinspect": "^0.12.7",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.4.4",
     "mobx-react-devtools": "^6.0.3",
-    "nightwatch": "^0.9.21",
-    "nightwatch-helpers": "^1.2.0",
     "nodemon": "^1.17.5",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
@@ -95,6 +96,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-syntax": "^0.28.0",
     "prettier": "^1.14.3",
+    "puppeteer": "^1.9.0",
     "rimraf": "^2.6.2",
     "selenium-server": "^3.12.0",
     "style-loader": "^0.23.1",
