--- a/package.json
+++ b/package.json
@@ -87,6 +87,8 @@
     "jsinspect": "^0.12.7",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
+    "markdownlint": "^0.11.0",
+    "markdownlint-cli": "^0.13.0",
     "mini-css-extract-plugin": "^0.4.4",
     "mobx-react-devtools": "^6.0.3",
     "nodemon": "^1.17.5",
