--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "server": "cross-env NODE_ENV=development npx nodemon --exec npx babel-node ./mockServer/app.js",
     "build:test": "cross-env NODE_ENV=production LOGIN_HOST=test npx webpack --progress --hide-modules --mode=production",
     "build:production": "cross-env NODE_ENV=production npx webpack --progress --hide-modules --mode=production",
-    "production": "npm run build:production",
-    "e2e": "jest -c jest.config.puppeteer.js",
-    "e2e:debug": "DEBUG=true jest -c jest.config.puppeteer.js",
+    "production": "yarn build:production",
+    "e2e": "npx jest -c jest.config.puppeteer.js",
+    "e2e:debug": "DEBUG=true npx jest -c jest.config.puppeteer.js",
     "changelog": "npx conventional-changelog -p angular -i CHANGELOG.md -s -r 10",
     "zip": "cd dist && zip -r dist ./* && cd -",
-    "test": "jest",
-    "coverage": "jest --coverage && node jest/openCoverage.js"
+    "test": "npx jest",
+    "coverage": "npx jest --coverage && node jest/openCoverage.js",
+    "lint": "npx eslint src/ __test__/ e2e/"
   },
   "author": "superwf@gmail.com",
   "license": "ISC",
@@ -81,6 +82,7 @@
     "import-js": "^3.2.0",
     "jest": "^23.6.0",
     "jest-environment-enzyme": "^7.0.0",
+    "jest-environment-puppeteer": "^3.4.0",
     "jest-enzyme": "^7.0.0",
     "jest-puppeteer": "^3.4.0",
     "jsdom": "^12.2.0",
@@ -98,7 +100,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-syntax": "^0.28.0",
     "prettier": "^1.14.3",
-    "puppeteer": "^1.9.0",
+    "puppeteer": "^1.10.0",
     "rimraf": "^2.6.2",
     "selenium-server": "^3.12.0",
     "style-loader": "^0.23.1",
@@ -154,6 +156,6 @@
   },
   "gitHooks": {
     "commit-msg": "npx commitlint -E GIT_PARAMS",
-    "pre-push": "yarn test"
+    "pre-push": "yarn test && yarn lint"
   }
 }
