--- a/package.json
+++ b/package.json
@@ -51,7 +51,6 @@
     "body-parser": "^1.18.3",
     "browserslist": "^4.0.1",
     "chalk": "^2.4.1",
-    "chromedriver": "^2.40.0",
     "commitizen": "^3.0.2",
     "commitlint": "^7.2.0",
     "compression-webpack-plugin": "^1.1.11",
@@ -100,7 +99,7 @@
     "postcss-loader": "^2.1.5",
     "postcss-syntax": "^0.28.0",
     "prettier": "^1.14.3",
-    "puppeteer": "^1.10.0",
+    "puppeteer-core": "^1.10.0",
     "rimraf": "^2.6.2",
     "selenium-server": "^3.12.0",
     "style-loader": "^0.23.1",
@@ -118,7 +117,7 @@
   "dependencies": {
     "animate.css": "^3.7.0",
     "ant-design-pro": "^2.0.0",
-    "antd": "^3.10.0",
+    "antd": "^3.10.4",
     "classnames": "^2.2.6",
     "core-js": "^2.5.7",
     "dexie": "^2.0.4",
@@ -134,6 +133,7 @@
     "mobx-react": "^5.3.1",
     "mobx-react-router": "^4.0.5",
     "mobx-utils": "^5.0.1",
+    "module-alias": "^2.1.0",
     "moment": "^2.22.2",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^2.2.1",
@@ -157,5 +157,8 @@
   "gitHooks": {
     "commit-msg": "npx commitlint -E GIT_PARAMS",
     "pre-push": "yarn test && yarn lint"
+  },
+  "_moduleAliases": {
+    "puppeteer": "node_modules/puppeteer-core"
   }
 }
