--- a/package.json
+++ b/package.json
@@ -94,7 +94,7 @@
     "markdownlint-cli": "^0.13.0",
     "mini-css-extract-plugin": "^0.4.4",
     "mobx-react-devtools": "^6.0.3",
-    "nodemon": "^1.17.5",
+    "nodemon": "1.18.7",
     "opn": "^5.3.0",
     "optimize-css-assets-webpack-plugin": "^4.0.2",
     "portfinder": "^1.0.13",
