test: 修正所有ts测试

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@babel/runtime": "^7.1.2",
     "@commitlint/config-conventional": "^7.1.2",
     "@commitlint/prompt-cli": "^7.2.0",
+    "@types/classnames": "^2.2.7",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/copy-webpack-plugin": "^4.4.3",
     "@types/happypack": "^5.0.0",
@@ -53,12 +54,14 @@
     "@types/jest": "^24.0.9",
     "@types/lodash": "^4.14.122",
     "@types/mini-css-extract-plugin": "^0.2.0",
+    "@types/nprogress": "^0.0.29",
     "@types/opn": "^5.1.0",
     "@types/optimize-css-assets-webpack-plugin": "^1.3.4",
     "@types/react": "^16.8.7",
     "@types/react-document-title": "^2.0.3",
     "@types/react-dom": "^16.8.2",
     "@types/react-router": "^4.4.5",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-transition-group": "^2.0.16",
     "@types/rimraf": "^2.0.2",
     "@types/sw-precache-webpack-plugin": "^0.11.0",
@@ -79,8 +82,8 @@
     "cross-env": "^5.1.6",
     "cross-spawn": "^6.0.5",
     "css-loader": "^1.0.0",
-    "enzyme": "^3.7.0",
-    "enzyme-adapter-react-16": "^1.6.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.1.0",
@@ -162,7 +165,7 @@
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "mobx-react-router": "^4.0.5",
-    "mobx-utils": "^5.0.1",
+    "mobx-utils": "^5.2.0",
     "module-alias": "^2.1.0",
     "moment": "^2.24.0",
     "nprogress": "^0.2.0",
