--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "babel-jest": "^24.3.1",
     "babel-loader": "^8.0.4",
     "babel-plugin-import": "^1.8.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "bestzip": "^2.1.2",
     "body-parser": "^1.18.3",
     "browserslist": "^4.0.1",
@@ -161,7 +162,7 @@
     "localforage": "^1.7.2",
     "localstorage-polyfill": "^1.0.1",
     "lodash": "^4.17.11",
-    "mini-css-extract-plugin": "^0.4.4",
+    "mini-css-extract-plugin": "^0.5.0",
     "mobx": "^5.9.0",
     "mobx-react": "^5.4.3",
     "mobx-react-router": "^4.0.5",
