--- a/package.json
+++ b/package.json
@@ -133,6 +133,7 @@
     "tslint-eslint-rules": "^5.4.0",
     "tslint-react": "^3.6.0",
     "typescript": "^3.3.3333",
+    "typings-for-css-modules-loader": "^1.7.0",
     "uglifyjs-webpack-plugin": "^1.2.5",
     "webpack-bundle-analyzer": "^3.0.2",
     "webpack-cli": "^3.2.3",
