--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@types/classnames": "^2.2.7",
     "@types/compression-webpack-plugin": "^2.0.0",
     "@types/copy-webpack-plugin": "^4.4.3",
+    "@types/enzyme": "^3.9.1",
     "@types/happypack": "^5.0.0",
     "@types/history": "^4.7.2",
     "@types/html-webpack-plugin": "^3.2.0",
